--- a/css/style.css
+++ b/css/style.css
@@ -10100,7 +10100,7 @@ input {
 }
 
 .megamenu ul li:hover {
-    background-color: #cd0e00;
+    background-color: #3E7899;
     padding: 13px 10px;
 }
 
