--- a/css/style.css
+++ b/css/style.css
@@ -2895,8 +2895,11 @@ footer.ftshap:before {
     /*  background: url(../images/banner/6.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
-	background-position: center center;  */
-    background-color: #fff;
+	background-position: center center; 
+    background-color: #fff; */
+    background: -moz-linear-gradient(left, #5495bf 0%, #000000 100%);
+    background: -webkit-linear-gradient(left, #5495bf 0%, #000000 100%);
+    background: linear-gradient(to right, #5495bf 0%, #000000 100%);
 }
 
 .service {
@@ -10101,7 +10104,8 @@ input {
 
 .megamenu ul li:hover {
     background-color: #3E7899;
-    padding: 13px 10px;
+    padding: 13px 0px 13px 10px;
+    margin-right: 20px;
 }
 
 .megamenu ul li:hover div {
@@ -10119,7 +10123,7 @@ input {
 }
 
 .menu-item-title {
-    width: 75%;
+    width: 85%;
     display: inline-block;
     margin-bottom: 6px;
     color: #000;
@@ -10449,7 +10453,8 @@ input {
 
 .award-item {
     margin-bottom: 10px;
-    box-shadow: 5px 7px #bfbfbf;
+    /* box-shadow: 5px 7px #bfbfbf; */
+    box-shadow: 5px 7px #e6e6e6;
 }
 
 .odd-item {
@@ -14478,4 +14483,155 @@ h2.vero-about-heading {
 
 .vr-center-img {
     width: 100%;
+}
+
+/* Character Design */
+
+.character-design-banner {
+    background-image: url(../images/services/character-design/character-design-services.jpg);
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100vh;
+}
+
+.service-box-inner {
+    padding: 15px 25px;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    height: 100%;
+    box-sizing: border-box;
+    overflow: hidden;
+    border-radius: 15px !important;
+    border: 1px solid #fff;
+    background: #f3f3f3 !important;
+    color: #212121;
+    transition: .3s all ease;
+    position: relative;
+    cursor: pointer;
+}
+
+.service-box-icon {
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    position: relative;
+    transition: .3s all ease;
+    background-color: #fff;
+    margin-bottom: 10px;
+    box-shadow: inset 2px 4px 3px rgb(0 0 0 / 9%);
+}
+
+.service-box-icon img {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    width: 54%;
+    height: auto;
+    transition: .3s ease all;
+}
+
+.services .nav-tabs .nav-item.show .nav-link, .services .nav-tabs .nav-link.active {
+    background: #212121 !important;
+    color: #fff !important;
+    border-radius: 15px;
+}
+
+.timeline-steps {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap
+}
+
+.timeline-steps .timeline-step {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    margin: 1rem
+}
+
+.timeline-steps .timeline-content {
+    width: 10rem;
+    text-align: center
+}
+
+.timeline-steps .timeline-content .inner-circle {
+    border-radius: 1.5rem;
+    height: 1rem;
+    width: 1rem;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #5495bf;
+}
+
+.timeline-steps .timeline-content .inner-circle:before {
+    content: "";
+    background-color: #5495bf;
+    display: inline-block;
+    height: 3rem;
+    width: 3rem;
+    min-width: 3rem;
+    border-radius: 6.25rem;
+    opacity: .5
+}
+
+.about-box {
+    background-color: transparent;
+    padding: 45px 15px;
+    cursor: default;
+    -webkit-transition: background .3s;
+    -moz-transition: background .3s;
+    transition: background .3s;
+}
+
+.about-box-icon {
+    width: 100px;
+    height: 100px;
+    position: relative;
+    margin: 0 auto;
+}
+
+.about-box-icon img {
+    width: 100%;
+    height: 100%;
+}
+
+.box-title {
+    text-align: center;
+    padding: 20px 0px;
+    text-transform: uppercase;
+}
+
+.box-desc {
+    text-align: center;
+}
+
+.about-box:hover {
+    background: -moz-linear-gradient(left, #5495bf 0%, #000000 100%);
+    background: -webkit-linear-gradient(left, #5495bf 0%, #000000 100%);
+    background: linear-gradient(to right, #5495bf 0%, #000000 100%);
+}
+
+.about-box:hover p {
+    color: #fff;
+}
+
+.why-choose-us .card {
+    height: 100%;
+    border-radius: 15px;
+}
+
+.why-choose-us .card img {
+    border-radius: 15px 15px 0px 0px;
+}
+
+.why-choose-us .card-body {
+    padding: 3rem;
 }
