--- a/css/style.css
+++ b/css/style.css
@@ -14537,7 +14537,9 @@ h2.vero-about-heading {
 }
 
 .services .nav-tabs .nav-item.show .nav-link, .services .nav-tabs .nav-link.active {
-    background: #212121 !important;
+    background: -moz-linear-gradient(left, #5495bf 0%, #000000 100%) !important;
+    background: -webkit-linear-gradient(left, #5495bf 0%, #000000 100%) !important;
+    background: linear-gradient(to right, #5495bf 0%, #000000 100%) !important;
     color: #fff !important;
     border-radius: 15px;
 }
@@ -14634,4 +14636,31 @@ h2.vero-about-heading {
 
 .why-choose-us .card-body {
     padding: 3rem;
+}
+
+.character-design {
+    background: -moz-linear-gradient(top, #0098C5 0, #101010 100%);
+    background: -webkit-linear-gradient(top, #0098C5 0, #101010 100%);
+    background: linear-gradient(to bottom, #0098C5 0, #101010 100%);
+}
+
+.character-design .container {
+    background-color: #fff;
+    border-radius: 15px;
+}
+
+.character-design span {
+    color: #0098C5;
+}
+
+.twod-character-design {
+    background: -moz-linear-gradient(top, #0098C5 0, #101010 100%);
+    background: -webkit-linear-gradient(top, #0098C5 0, #101010 100%);
+    background: linear-gradient(to bottom, #0098C5 0, #101010 100%);
+}
+
+.threed-character-design {
+    background: -moz-linear-gradient(top, #0098C5 0, #101010 100%);
+    background: -webkit-linear-gradient(top, #0098C5 0, #101010 100%);
+    background: linear-gradient(to bottom, #0098C5 0, #101010 100%);
 }
