--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1725,7 +1725,84 @@
     }
 }
 
+@media (max-width: 992px) {
+    .timeline {
+        padding: 15px;
+    }
+    .timeline:after {
+        border: 0;
+    }
+    .timeline .timeline-row:nth-child(odd) {
+        padding: 0;
+    }
+    .timeline .timeline-row:nth-child(odd) .timeline-time {
+        position: relative;
+        top: 0;
+        left: 0;
+        margin: 0 0 10px 0;
+    }
+    .timeline .timeline-row:nth-child(odd) .timeline-content {
+        margin: 0;
+    }
+    .timeline .timeline-row:nth-child(odd) .timeline-content:before {
+        display: none;
+    }
+    .timeline .timeline-row:nth-child(odd) .timeline-content:after {
+        display: none;
+    }
+    .timeline .timeline-row:nth-child(even) {
+        padding: 0;
+    }
+    .timeline .timeline-row:nth-child(even) .timeline-time {
+        position: relative;
+        top: 0;
+        left: 0;
+        margin: 0 0 10px 0;
+        text-align: left;
+    }
+    .timeline .timeline-row:nth-child(even) .timeline-content {
+        margin: 0;
+    }
+    .timeline .timeline-row:nth-child(even) .timeline-content:before {
+        display: none;
+    }
+    .timeline .timeline-row:nth-child(even) .timeline-content:after {
+        display: none;
+    }
+}
+
+@media (min-width: 1200px) {
+    .shop-container {
+        max-width: 1110px !important;
+    }
+}
+
 /* Custom */
+
+@media only screen and (min-width: 1100px) {
+	.cd-horizontal-timeline {
+		margin: 6em auto;
+	}
+
+	.cd-horizontal-timeline::before {
+    /* never visible - this is used in jQuery to check the current MQ */
+		content: 'desktop';
+	}
+}
+
+@media only screen and (min-width: 768px) {
+	.cd-horizontal-timeline .events-content h2 {
+		font-size: 7rem;
+	}
+
+	.cd-horizontal-timeline .events-content em {
+		font-size: 2rem;
+	}
+
+	.cd-horizontal-timeline .events-content p {
+		font-size: 1.8rem;
+	}
+}
 
 /* Tablet Device = 768px */
 
