--- a/css/style.css
+++ b/css/style.css
@@ -12544,6 +12544,15 @@ ul.service_box li h5 {
     text-align: center;
 }
 
+.view-more-button {
+    background-color: #fff;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    padding: 5px 0px;
+    text-align: center;
+    margin: 10px auto 0px;
+}
+
 /* 2D 3D Floor Plan */
 
 .floor-plan-banner {
@@ -14631,409 +14640,292 @@ h2.vero-about-heading {
 
 /* Timeline */
 
-.ver-timeline li::marker {
-    font-size: 1px !important;
-}
-
-.cd-horizontal-timeline {
-	opacity: 0;
-	margin: 2em auto;
-	-webkit-transition: opacity 0.2s;
-	-moz-transition: opacity 0.2s;
-	transition: opacity 0.2s;
-}
-
-.cd-horizontal-timeline::before {
-  /* never visible - this is used in jQuery to check the current MQ */
-	content: 'mobile';
-	display: none;
-}
-
-.cd-horizontal-timeline.loaded {
-  /* show the timeline after events position has been set (using JavaScript) */
-	opacity: 1;
-}
-
-.cd-horizontal-timeline .ver-timeline {
+.timeline-carousel {
+	margin: 0;
+	background-color: #323232;
+	font-weight: 400;
+	padding: 86px 6.9444% 90px 6.9444%;
 	position: relative;
-	height: 100px;
-	width: 90%;
-	max-width: 90%;
-	margin: 0 auto;
-}
-
-.cd-horizontal-timeline .events-wrapper {
-	position: relative;
-	height: 100%;
-	margin: 0 40px;
 	overflow: hidden;
 }
 
-.cd-horizontal-timeline .events-wrapper::after, .cd-horizontal-timeline .events-wrapper::before {
-  /* these are used to create a shadow effect at the sides of the timeline */
-	content: '';
+.timeline-carousel:after, .timeline-carousel:before {
+	content: "";
 	position: absolute;
-	z-index: 2;
-	top: 0;
-	height: 100%;
-	width: 20px;
-}
-
-.cd-horizontal-timeline .events-wrapper::before {
-	left: 0;
-	background-image: -webkit-linear-gradient( left , #f8f8f8, rgba(248, 248, 248, 0));
-	background-image: linear-gradient(to right, #f8f8f8, rgba(248, 248, 248, 0));
-}
-
-.cd-horizontal-timeline .events-wrapper::after {
-	right: 0;
-	background-image: -webkit-linear-gradient( right , #f8f8f8, rgba(248, 248, 248, 0));
-	background-image: linear-gradient(to left, #f8f8f8, rgba(248, 248, 248, 0));
-}
-
-.cd-horizontal-timeline .events {
-  /* this is the grey line/timeline */
-	position: absolute;
-	z-index: 1;
-	left: 0;
-	top: 49px;
-	height: 2px;
-  /* width will be set using JavaScript */
-	background: #dfdfdf;
-	-webkit-transition: -webkit-transform 0.4s;
-	-moz-transition: -moz-transform 0.4s;
-	transition: transform 0.4s;
-}
-
-.cd-horizontal-timeline .filling-line {
-  /* this is used to create the green line filling the timeline */
-	position: absolute;
-	z-index: 1;
-	left: 0;
-	top: 0;
-	height: 100%;
-	width: 100%;
-	background-color: #0099ff;
-	-webkit-transform: scaleX(0);
-	-moz-transform: scaleX(0);
-	-ms-transform: scaleX(0);
-	-o-transform: scaleX(0);
-	transform: scaleX(0);
-	-webkit-transform-origin: left center;
-	-moz-transform-origin: left center;
-	-ms-transform-origin: left center;
-	-o-transform-origin: left center;
-	transform-origin: left center;
-	-webkit-transition: -webkit-transform 0.3s;
-	-moz-transition: -moz-transform 0.3s;
-	transition: transform 0.3s;
-}
-
-.cd-horizontal-timeline .events a {
-	position: absolute;
-	bottom: 0;
-	z-index: 2;
-	text-align: center;
-	font-size: 1.3rem;
-	padding-bottom: 15px;
-	color: #383838;
-  /* fix bug on Safari - text flickering while timeline translates */
-	-webkit-transform: translateZ(0);
-	-moz-transform: translateZ(0);
-	-ms-transform: translateZ(0);
-	-o-transform: translateZ(0);
-	transform: translateZ(0);
-}
-
-.cd-horizontal-timeline .events a::after {
-  /* this is used to create the event spot */
-	content: '';
-	position: absolute;
-	left: 50%;
-	right: auto;
-	-webkit-transform: translateX(-50%);
-	-moz-transform: translateX(-50%);
-	-ms-transform: translateX(-50%);
-	-o-transform: translateX(-50%);
-	transform: translateX(-50%);
-	bottom: -5px;
-	height: 12px;
-	width: 12px;
-	border-radius: 50%;
-	border: 2px solid #dfdfdf;
-	background-color: #f8f8f8;
-	-webkit-transition: background-color 0.3s, border-color 0.3s;
-	-moz-transition: background-color 0.3s, border-color 0.3s;
-	transition: background-color 0.3s, border-color 0.3s;
-}
-
-.no-touch .cd-horizontal-timeline .events a:hover::after {
-	background-color: #0099ff;
-	border-color: #0099ff;
-}
-
-.cd-horizontal-timeline .events a.selected {
-	pointer-events: none;
-}
-
-.cd-horizontal-timeline .events a.selected::after {
-	background-color: #0099ff;
-	border-color: #0099ff;
-}
-
-.cd-horizontal-timeline .events a.older-event::after {
-	border-color: #0099ff;
-}
-
-.cd-timeline-navigation a {
-  /* these are the left/right arrows to navigate the timeline */
-	position: absolute;
-	z-index: 1;
-	top: 50%;
-	bottom: auto;
-	-webkit-transform: translateY(-50%);
-	-moz-transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-	-o-transform: translateY(-50%);
-	transform: translateY(-50%);
-	height: 34px;
-	width: 34px;
-	border-radius: 50%;
-	border: 2px solid #dfdfdf;
-  /* replace text with an icon */
-	overflow: hidden;
-	color: transparent;
-	text-indent: 100%;
-	white-space: nowrap;
-	-webkit-transition: border-color 0.3s;
-	-moz-transition: border-color 0.3s;
-	transition: border-color 0.3s;
-}
-
-.cd-timeline-navigation a::after {
-  /* arrow icon */
-	content: '';
-	position: absolute;
-	height: 16px;
-	width: 16px;
-	left: 50%;
-	top: 50%;
-	bottom: auto;
-	right: auto;
-	-webkit-transform: translateX(-50%) translateY(-50%);
-	-moz-transform: translateX(-50%) translateY(-50%);
-	-ms-transform: translateX(-50%) translateY(-50%);
-	-o-transform: translateX(-50%) translateY(-50%);
-	transform: translateX(-50%) translateY(-50%);
-	background: url(../img/cd-arrow.svg) no-repeat 0 0;
-}
-
-.cd-timeline-navigation a.prev {
-	left: 0;
-	-webkit-transform: translateY(-50%) rotate(180deg);
-	-moz-transform: translateY(-50%) rotate(180deg);
-	-ms-transform: translateY(-50%) rotate(180deg);
-	-o-transform: translateY(-50%) rotate(180deg);
-	transform: translateY(-50%) rotate(180deg);
-}
-
-.cd-timeline-navigation a.next {
-	right: 0;
-}
-
-.no-touch .cd-timeline-navigation a:hover {
-	border-color: #0099ff;
-}
-
-.cd-timeline-navigation a.inactive {
-	cursor: not-allowed;
-}
-
-.cd-timeline-navigation a.inactive::after {
-	background-position: 0 -16px;
-}
-
-.no-touch .cd-timeline-navigation a.inactive:hover {
-	border-color: #dfdfdf;
-}
-
-.cd-horizontal-timeline .events-content {
-	position: relative;
-	width: 100%;
-	margin: 2em 0;
-	overflow: hidden;
-	-webkit-transition: height 0.4s;
-	-moz-transition: height 0.4s;
-	transition: height 0.4s;
-}
-
-.cd-horizontal-timeline .events-content li {
-	position: absolute;
-	z-index: 1;
-	width: 100%;
-	left: 0;
-	top: 0;
-	-webkit-transform: translateX(-100%);
-	-moz-transform: translateX(-100%);
-	-ms-transform: translateX(-100%);
-	-o-transform: translateX(-100%);
-	transform: translateX(-100%);
-	padding: 0 5%;
-	opacity: 0;
-	-webkit-animation-duration: 0.4s;
-	-moz-animation-duration: 0.4s;
-	animation-duration: 0.4s;
-	-webkit-animation-timing-function: ease-in-out;
-	-moz-animation-timing-function: ease-in-out;
-	animation-timing-function: ease-in-out;
-}
-
-.cd-horizontal-timeline .events-content li.selected {
-  /* visible event content */
-	position: relative;
-	z-index: 2;
-	opacity: 1;
-	-webkit-transform: translateX(0);
-	-moz-transform: translateX(0);
-	-ms-transform: translateX(0);
-	-o-transform: translateX(0);
-	transform: translateX(0);
-}
-
-.cd-horizontal-timeline .events-content li.enter-right, .cd-horizontal-timeline .events-content li.leave-right {
-	-webkit-animation-name: cd-enter-right;
-	-moz-animation-name: cd-enter-right;
-	animation-name: cd-enter-right;
-}
-
-.cd-horizontal-timeline .events-content li.enter-left, .cd-horizontal-timeline .events-content li.leave-left {
-	-webkit-animation-name: cd-enter-left;
-	-moz-animation-name: cd-enter-left;
-	animation-name: cd-enter-left;
-}
-
-.cd-horizontal-timeline .events-content li.leave-right, .cd-horizontal-timeline .events-content li.leave-left {
-	-webkit-animation-direction: reverse;
-	-moz-animation-direction: reverse;
-	animation-direction: reverse;
-}
-
-.cd-horizontal-timeline .events-content li > * {
-	max-width: 800px;
-	margin: 0 auto;
-}
-
-.cd-horizontal-timeline .events-content h2 {
-	font-weight: bold;
-	font-size: 2.6rem;
-	font-family: "Playfair Display", serif;
-	font-weight: 700;
-	line-height: 1.2;
-}
-
-.cd-horizontal-timeline .events-content em {
 	display: block;
-	font-style: italic;
-	margin: 10px auto;
+	top: 0;
+	height: 100%;
+	width: 6.9444%;
+	background-color: #323232;
+	z-index: 3;
+	width: 6.9444%;
 }
 
-.cd-horizontal-timeline .events-content em::before {
-	content: '- ';
+.timeline-carousel:after {
+	left: 0;
 }
 
-.cd-horizontal-timeline .events-content p {
-	font-size: 1.4rem;
-	color: #959595;
+.timeline-carousel:before {
+	right: 0;
+	opacity: 0;
 }
 
-.cd-horizontal-timeline .events-content em, .cd-horizontal-timeline .events-content p {
-	line-height: 1.6;
+.timeline-carousel .slick-list {
+	overflow: visible;
 }
 
-@-webkit-keyframes cd-enter-right {
-	0% {
-		opacity: 0;
-		-webkit-transform: translateX(100%);
-	}
-
-	100% {
-		opacity: 1;
-		-webkit-transform: translateX(0%);
-	}
+.timeline-carousel .slick-dots {
+	bottom: -73px;
 }
 
-@-moz-keyframes cd-enter-right {
-	0% {
-		opacity: 0;
-		-moz-transform: translateX(100%);
-	}
-
-	100% {
-		opacity: 1;
-		-moz-transform: translateX(0%);
-	}
+.timeline-carousel h1 {
+	color: white;
+	font-family: 'Libre Franklin', sans-serif;
+	font-weight: 700;
 }
 
-@keyframes cd-enter-right {
-	0% {
-		opacity: 0;
-		-webkit-transform: translateX(100%);
-		-moz-transform: translateX(100%);
-		-ms-transform: translateX(100%);
-		-o-transform: translateX(100%);
-		transform: translateX(100%);
-	}
-
-	100% {
-		opacity: 1;
-		-webkit-transform: translateX(0%);
-		-moz-transform: translateX(0%);
-		-ms-transform: translateX(0%);
-		-o-transform: translateX(0%);
-		transform: translateX(0%);
-	}
+.timeline-carousel p {
+	color: white;
+	font-weight: 300;
 }
 
-@-webkit-keyframes cd-enter-left {
-	0% {
-		opacity: 0;
-		-webkit-transform: translateX(-100%);
-	}
-
-	100% {
-		opacity: 1;
-		-webkit-transform: translateX(0%);
-	}
+.timeline-carousel__image {
+	padding-right: 30px;
 }
 
-@-moz-keyframes cd-enter-left {
-	0% {
-		opacity: 0;
-		-moz-transform: translateX(-100%);
-	}
-
-	100% {
-		opacity: 1;
-		-moz-transform: translateX(0%);
-	}
+.timeline-carousel__item {
+	cursor: grab;
+	cursor: -moz-grab;
+	cursor: -webkit-grab;
 }
 
-@keyframes cd-enter-left {
-	0% {
-		opacity: 0;
-		-webkit-transform: translateX(-100%);
-		-moz-transform: translateX(-100%);
-		-ms-transform: translateX(-100%);
-		-o-transform: translateX(-100%);
-		transform: translateX(-100%);
-	}
+.timeline-carousel__item .media-wrapper {
+	opacity: 0.4;
+	padding-bottom: 71.4%;
+	-webkit-transition: all 0.4s cubic-bezier(0.55, 0.085, 0.68, 0.53);
+	-o-transition: all 0.4s cubic-bezier(0.55, 0.085, 0.68, 0.53);
+	transition: all 0.4s cubic-bezier(0.55, 0.085, 0.68, 0.53);
+}
 
-	100% {
-		opacity: 1;
-		-webkit-transform: translateX(0%);
-		-moz-transform: translateX(0%);
-		-ms-transform: translateX(0%);
-		-o-transform: translateX(0%);
-		transform: translateX(0%);
-	}
+.timeline-carousel__item:last-child .timeline-carousel__item-inner:after {
+	width: calc(100% - 30px);
+}
+
+.timeline-carousel__item-inner {
+	position: relative;
+	padding-top: 45px;
+}
+
+.timeline-carousel__item-inner:after {
+	position: absolute;
+	width: 100%;
+	top: 45px;
+	left: 0;
+	content: "";
+	border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.timeline-carousel__item-inner .year {
+	font-size: 20px;
+	line-height: 36px;
+	color: white;
+	display: table;
+	letter-spacing: -1px;
+	padding-right: 10px;
+	background-color: #323232;
+	z-index: 1;
+	position: relative;
+	margin: -15px 0 20px;
+	font-weight: 700;
+}
+
+.timeline-carousel__item-inner .year:after {
+	content: "";
+	position: absolute;
+	display: block;
+	left: -10px;
+	top: 0;
+	height: 100%;
+	width: 10px;
+	background-color: #323232;
+	z-index: 3;
+}
+
+.timeline-carousel__item-inner .month {
+	font-size: 12px;
+	text-transform: uppercase;
+	color: #ffc107;
+	display: block;
+	margin-bottom: 10px;
+	font-weight: 600;
+}
+
+.timeline-carousel__item-inner p {
+	line-height: 18px;
+	color: white;
+	width: 60%;
+	font-weight: 400;
+	margin-bottom: 15px;
+}
+
+.timeline-carousel__item-inner .read-more {
+	font-size: 12px;
+	color: #ffc107;
+	display: table;
+	margin-bottom: 10px;
+	font-weight: 900;
+	text-decoration: none;
+	position: relative;
+}
+
+.timeline-carousel__item-inner .read-more:after {
+	content: "";
+	position: absolute;
+	left: 0;
+	bottom: -1px;
+	width: 0;
+	border-bottom: 2px solid #ffc107;
+	-webkit-transition: all 0.2s cubic-bezier(0.55, 0.085, 0.68, 0.53);
+	-o-transition: all 0.2s cubic-bezier(0.55, 0.085, 0.68, 0.53);
+	transition: all 0.2s cubic-bezier(0.55, 0.085, 0.68, 0.53);
+}
+
+.timeline-carousel__item-inner .read-more:hover:after {
+	width: 100%;
+}
+
+.timeline-carousel__item-inner .pointer {
+	height: 29px;
+	position: relative;
+	z-index: 1;
+	margin: -4px 0 16px;
+}
+
+.timeline-carousel__item-inner .pointer:after, .timeline-carousel__item-inner .pointer:before {
+	position: absolute;
+	content: "";
+}
+
+.timeline-carousel__item-inner .pointer:after {
+	width: 9px;
+	height: 9px;
+	border-radius: 100%;
+	top: 0;
+	left: 0;
+	background-color: #ffc107;
+}
+
+.timeline-carousel__item-inner .pointer:before {
+	width: 1px;
+	height: 100%;
+	top: 0;
+	left: 4px;
+	background-color: #ffc107;
+}
+
+.timeline-carousel .slick-active .media-wrapper {
+	opacity: 1 !important;
+}
+
+.slick-dots {
+	bottom: 160px;
+	list-style: none;
+	position: absolute;
+	width: 100%;
+	left: 0;
+	text-align: center;
+	z-index: 2;
+}
+
+.slick-dots li {
+	cursor: grab;
+	cursor: -moz-grab;
+	cursor: -webkit-grab;
+	display: inline-block;
+	margin: 0 6px;
+	position: relative;
+	width: 10px;
+	height: 10px;
+}
+
+.slick-dots li:last-child {
+	margin-right: 0;
+}
+
+.slick-dots li.slick-active button {
+	background: #ffc107;
+	border-color: #ffc107;
+}
+
+.slick-dots li button {
+	display: block;
+	font-size: 0;
+	width: 10px;
+	height: 10px;
+	padding: 0;
+	background-color: rgba(255, 255, 255, 0.6);
+	border-color: rgba(255, 255, 255, 0.6);
+	cursor: pointer;
+	-webkit-transition: all 0.4s cubic-bezier(0.55, 0.085, 0.68, 0.53);
+	-o-transition: all 0.4s cubic-bezier(0.55, 0.085, 0.68, 0.53);
+	transition: all 0.4s cubic-bezier(0.55, 0.085, 0.68, 0.53);
+}
+
+.slick-dots li button:hover {
+	background: #ffc107;
+	border-color: #ffc107;
+}
+
+.link {
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	padding: 20px;
+	z-index: 9999;
+}
+
+.link a {
+	display: flex;
+	align-items: center;
+	text-decoration: none;
+	color: #fff;
+}
+
+.link .fa {
+	font-size: 28px;
+	margin-right: 8px;
+	color: #fff;
+}
+
+.slick-prev svg, .slick-next svg {
+	height: auto;
+	width: 18px;
+	padding-bottom: 2px;
+}
+
+.slick-prev .btn, .slick-next .btn {
+	border-radius: 0;
+	font-family: 'Libre Franklin', sans-serif;
+	font-size: 12px;
+	text-transform: uppercase;
+	font-weight: 700;
+}
+
+.slick-prev, .slick-next {
+	position: absolute;
+	top: 0;
+	z-index: 9999;
+	border-radius: 0;
+	font-family: 'Libre Franklin', sans-serif;
+	font-size: 12px;
+	text-transform: uppercase;
+	font-weight: 700;
+}
+
+.slick-prev {
+	left: 0;
+}
+
+.slick-next {
+	right: 30px;
 }
